--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,6 +87,12 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: terraform validate
 
+    # Terraform import current state
+    - name: Terraform Import
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: terraform import
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
